# mirror

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml.example  calculate_sizes.sh  config.toml.example  docker-compose.yml  genres.toml  init_files_db.sql  init_marmak_db.sql  shared_icons.toml
files/static/: admin.js  audio.js  breadcrumbs.js  browser.js  formatbytes.js  formatbytessi.js  json.js  polyfills.js  print.css  site.webmanifest  sysinfo.js
files/static/fonts/: Lato.css  OpenSans.css  Roboto.css  Rubik.css
files/static/lang/: de.php  en.php  ja.php  ko.php  pl.php  pt.php  ru.php  uk.php  zh.php
files/static/styles/: antique.css  dark.css  darkblu.css  darkblue.css  darkold.css  default.css  (+16 more)
lang/: bg.toml  bs.toml  cs.toml  csb.toml  da.toml  de.toml  el.toml  en.toml  es.toml  et.toml  fr.toml  hi.toml  hr.toml  hu.toml  id.toml  it.toml  ja.toml  kk.toml  ko.toml  lt.toml  lv.toml  ms.toml  no.toml  pl.toml  pt.toml  ro.toml  ru.toml  sk.toml  sl.toml  sr.toml  sv.toml  szl.toml  tr.toml  uk.toml  zh.toml
public/static/: admin.js  audio.js  breadcrumbs.js  browser.css  browser.js  formatbytes.js  formatbytessi.js  polyfills.js  sysinfo.js  utils.js  video.js
src/: account.rs  admin.rs  api.rs  config.rs  db.rs  guards.rs  i18n.rs  jwt.rs  main.rs  mirrorfile.rs  responders.rs  settings.rs  tests.rs  utils.rs
templates/: _macros.html.tera  admin.html.tera  audio.html.tera  base.html.tera  details.html.tera  footer.html.tera  iframe.html.tera  index.html.tera  login.html.tera  md.html.tera  nav.html.tera  plain.html.tera  privateindex.html.tera  search.html.tera  settings.html.tera  sitemap.xml.tera  sysinfo.html.tera  upload.html.tera  video.html.tera  zip.html.tera
templates/error/: 400.html.tera  403.html.tera  404.html.tera  413.html.tera  500.html.tera  507.html.tera  private.html.tera
templates/plain/: admin.html.tera  audio.html.tera  base.html.tera  details.html.tera  footer.html.tera  index.html.tera  login.html.tera  md.html.tera  nav.html.tera  search.html.tera  settings.html.tera  sysinfo.html.tera  upload.html.tera  video.html.tera  zip.html.tera
templates/scripts/: index.js.tera  indexuploader.js.tera  linkshortener.js.tera  share.js.tera  upload.js.tera  uploader.js.tera  zip.js.tera
templates/test/: strings.html.tera
(+23 files in other folders)
