[package]
name = "mirror"
version = "1.8.1"
edition = "2021"
publish = false

[dependencies]
audiotags = "0"
bcrypt = "0"
jsonwebtoken = "10"
markdown = "1"
once_cell = "1"
rand = "0.10"
rocket = { version = "0.5", features = ["json"] }
rocket-multipart-form-data = "0.10"
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
rocket_db_pools = { version = "0.2", features = ["sqlx_mysql"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "1"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zip = "6"
